--- a/sass/mainStyle.scss
+++ b/sass/mainStyle.scss
@@ -1,13 +1,14 @@
 @import '_reset.scss';
 
 .mainPage{
-    min-height: 100vh;
+    // min-height: 100vh;
     width: 100vw;
     display: grid;
     grid-template-columns: [container-start]1fr [center-start] repeat(6,[col-start] minmax(min-content,16.67rem)[col-end]) [center-end] 1fr[container-end];
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 12vw max-content;
 
     .mainPage_headerContainer{
+        margin-bottom: 2rem;
         grid-column: container-start / container-end;
         display: flex;
         width: 100%;
@@ -75,6 +76,69 @@
                 margin-left: 10px;
             }
         }
+    }
+
+    &_mainBodyContainer{
+        height: fit-content;
+        grid-column: container-start / container-end;
+
+        &_fanclubContainer{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));
+        grid-auto-rows: min-content;
+        justify-items: center;
+        align-items: center;
+        grid-gap: 1rem;
+        // padding: 25px 0;
+
+            .fanclub_card{
+                height: 8rem;
+                width: 8rem;
+
+                div{
+                    height: 100%;
+                    width: 100%;
+                    background-size: cover;
+                }
+
+            }
+
+
+        }
+
+        &_categoriesContainer{
+            height: max-content;
+            display: flex;
+            flex-direction: column;
+            // grid-auto-rows: auto;
+            // gap: 1rem 0;
+            padding-bottom: 1rem 0;
+
+            .categories_card_container{
+                margin: 2rem;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(8rem,1fr));
+                grid-auto-rows: min-content;
+                justify-items: center;
+                align-items: center;
+                gap: 10px 0px;
+                padding: 1rem 0;
+
+                .cats_card{
+                    height: 8rem;
+                    width: 8rem;
+
+                    div{
+                        width: 100%;
+                        height: 100%;
+                        background-size: cover;
+                    }
+                }
+            }
+
+
+        }
+
     }
 
 }
