--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -8,13 +8,13 @@
 }
 
 .mainPage {
-  min-height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-columns: [container-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, 16.67rem) [col-end]) [center-end] 1fr [container-end];
-  grid-template-rows: 20% 80%;
+  grid-template-rows: 12vw max-content;
 }
 .mainPage .mainPage_headerContainer {
+  margin-bottom: 2rem;
   grid-column: container-start/container-end;
   display: flex;
   width: 100%;
@@ -69,4 +69,52 @@
   border: 0.1rem black solid;
   border-radius: 5px;
   margin-left: 10px;
+}
+.mainPage_mainBodyContainer {
+  height: -moz-fit-content;
+  height: fit-content;
+  grid-column: container-start/container-end;
+}
+.mainPage_mainBodyContainer_fanclubContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-auto-rows: min-content;
+  justify-items: center;
+  align-items: center;
+  grid-gap: 1rem;
+}
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_card {
+  height: 8rem;
+  width: 8rem;
+}
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_card div {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+}
+.mainPage_mainBodyContainer_categoriesContainer {
+  height: -moz-max-content;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem 0;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-auto-rows: min-content;
+  justify-items: center;
+  align-items: center;
+  gap: 10px 0px;
+  padding: 1rem 0;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card {
+  height: 8rem;
+  width: 8rem;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card div {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
