--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -7,81 +6,32 @@
   box-sizing: border-box;
 }
 
+.html {
+  font-size: 62.5%;
+}
+
 .mainPage {
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
   display: grid;
-  grid-template-columns: [container-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, 16.67rem) [col-end]) [center-end] 1fr [container-end];
-  grid-template-rows: 12vw max-content;
+  grid-template-columns: [container-start] 1fr [center-start] repeat(10, [col-start] minmax(min-content, 10rem) [col-end]) [center-end] 1fr [container-end];
+  grid-template-rows: 15vh minmax(85vh, min-content);
 }
 .mainPage .mainPage_headerContainer {
-  margin-bottom: 2rem;
   grid-column: container-start/container-end;
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.mainPage .mainPage_headerContainer .outerShell {
-  width: 80%;
-  overflow-x: hidden;
-  height: 100%;
-}
-.mainPage .mainPage_headerContainer .outerShell .mainPage_headerContainer_imageContents {
-  position: relative;
-  left: -14%;
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-  height: 100%;
-  padding: 8px;
-  justify-content: space-evenly;
-}
-.mainPage .mainPage_headerContainer .outerShell .mainPage_headerContainer_imageContents .topics_images_container {
-  height: 100px;
-  width: 200px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 0.4rem;
-}
-.mainPage .mainPage_headerContainer .outerShell::before {
-  content: "◀️";
-  position: absolute;
-  left: 100px;
-  top: 40px;
-  font-size: xx-large;
-}
-.mainPage .mainPage_headerContainer .outerShell::after {
-  content: "▶️";
-  position: absolute;
-  right: 100px;
-  top: 40px;
-  font-size: xx-large;
-}
-.mainPage .mainPage_headerContainer .mainPage_headerContainer_imageDots {
-  display: flex;
-  width: 30%;
-  justify-content: center;
-}
-.mainPage .mainPage_headerContainer .mainPage_headerContainer_imageDots .mainPage_headerContainer_imageDots_dots {
-  height: 10px;
-  width: 10px;
-  border: 0.1rem black solid;
-  border-radius: 5px;
-  margin-left: 10px;
+  background-color: aqua;
+  margin-bottom: 2rem;
 }
 .mainPage_mainBodyContainer {
-  height: -moz-fit-content;
-  height: fit-content;
-  grid-column: container-start/container-end;
+  grid-column: center-start/center-end;
 }
 .mainPage_mainBodyContainer_fanclubContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   grid-auto-rows: min-content;
   justify-items: center;
   align-items: center;
-  grid-gap: 1rem;
+  gap: 1rem;
 }
 .mainPage_mainBodyContainer_fanclubContainer .fanclub_card {
   height: 8rem;
@@ -93,21 +43,20 @@
   background-size: cover;
 }
 .mainPage_mainBodyContainer_categoriesContainer {
-  height: -moz-max-content;
-  height: max-content;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 1rem 0;
+  margin-top: 2rem;
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  gap: 3rem;
+  align-items: center;
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container {
-  margin: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   grid-auto-rows: min-content;
   justify-items: center;
   align-items: center;
   gap: 10px 0px;
-  padding: 1rem 0;
+  padding: 1rem 0 2rem;
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card {
   height: 8rem;
