--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -24,26 +24,47 @@
 }
 .mainPage_mainBodyContainer {
   grid-column: center-start/center-end;
+  padding-top: 3rem;
 }
 .mainPage_mainBodyContainer_fanclubContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
   grid-auto-rows: min-content;
   justify-items: center;
   align-items: center;
   gap: 1rem;
+  position: relative;
+}
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_header {
+  position: absolute;
+  top: -3.2rem;
+  left: calc(0.5rem + 4.2vw);
+}
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_header::first-letter {
+  color: red;
+}
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0.1rem;
+  width: 55vw;
+  background-color: black;
 }
 .mainPage_mainBodyContainer_fanclubContainer .fanclub_card {
-  height: 8rem;
-  width: 8rem;
+  height: 10rem;
+  width: 14rem;
+  border-right: 0.1rem beige solid;
+  border-bottom: 0.1rem beige solid;
 }
-.mainPage_mainBodyContainer_fanclubContainer .fanclub_card div {
-  height: 100%;
+.mainPage_mainBodyContainer_fanclubContainer .fanclub_card div:first-child {
+  height: 50%;
   width: 100%;
   background-size: cover;
 }
 .mainPage_mainBodyContainer_categoriesContainer {
-  margin-top: 2rem;
+  margin-top: 3rem;
   display: grid;
   grid-template-rows: repeat(3, min-content);
   gap: 3rem;
@@ -51,7 +72,7 @@
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
   grid-auto-rows: min-content;
   justify-items: center;
   align-items: center;
@@ -59,11 +80,13 @@
   padding: 1rem 0 2rem;
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card {
-  height: 8rem;
-  width: 8rem;
+  height: 10rem;
+  width: 14rem;
+  border-right: 0.1rem beige solid;
+  border-bottom: 0.1rem beige solid;
 }
-.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card div {
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card div:first-child {
   width: 100%;
-  height: 100%;
+  height: 50%;
   background-size: cover;
 }
