--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -11,6 +11,16 @@
     width: 24rem !important;
   }
 }
+@media screen and (max-width: 660px) {
+  .mainPage_mainBodyContainer_fanclubContainer {
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 1rem)) !important;
+    justify-content: center;
+  }
+  .categories_card_container {
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 1rem)) !important;
+    justify-content: center;
+  }
+}
 .html {
   font-size: 62.5%;
 }
@@ -107,6 +117,11 @@
   gap: 1rem;
   position: relative;
 }
+.mainPage_mainBodyContainer_fanclubContainer_button {
+  position: absolute;
+  top: -2rem;
+  right: 3%;
+}
 .mainPage_mainBodyContainer_fanclubContainer .fanclub_header {
   position: absolute;
   top: -3.2rem;
@@ -165,6 +180,12 @@
   align-items: center;
   gap: 10px 1rem;
   padding: 1rem 0 2rem;
+  position: relative;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container_button {
+  position: absolute;
+  top: -2rem;
+  right: 3%;
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container .categories_first_unit {
   position: relative;
@@ -179,9 +200,18 @@
   width: 14rem;
   border-right: 0.1rem beige solid;
   border-bottom: 0.1rem beige solid;
+  display: grid;
+  grid-template-rows: 50% 50%;
 }
 .mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card div:first-child {
   width: 100%;
-  height: 50%;
   background-size: cover;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card .details_container {
+  display: grid;
+  grid-template-rows: 30% 70%;
+}
+.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card .details_container_tag_name {
+  display: flex;
+  justify-content: space-between;
 }
