--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -21,6 +21,14 @@
     justify-content: center;
   }
 }
+@media screen and (max-width: 500px) {
+  .Right_button {
+    display: none !important;
+  }
+  .Left_button {
+    display: none !important;
+  }
+}
 .html {
   font-size: 62.5%;
 }
